<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Cloud DLP Example</string>
    <string name="instructional_text_string"><![CDATA[Analyze the following text for sensitive information, like names, phone, & credit card numbers.]]></string>
    <string name="instructional_text_photo">Or, take a photo and have it analyzed. If sensitive information is found it will be redacted.</string>
    <string name="input_placeholder">Enter text here …</string>
    <string name="inspect_text">Search Text</string>
    <string name="take_and_inspect_photo"><![CDATA[Take & Inspect Photo]]></string>
    <string name="text_heading">Analyze Text</string>
    <string name="image_heading">Analyze Image</string>
    <string name="result">Result</string>
    <string name="title_activity_show_photo">ShowPhotoActivity</string>
</resources>
